Added request property mapping.